examples/test/testpolicy11186.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11186
  namespace: namespace125
spec:
  podSelector:
    matchLabels:
      key47: value29
      key27: value47
      key25: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value19
          key29: value0
      podSelector:
        matchLabels:
          key23: value41
          key34: value19
          key48: value44
